# afrigate

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  SPEC.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  compliance.py  doc_intel.py  doc_intel_graph.py  evaluator.py  hs_classifier.py
core/: config.py  graph.py  state.py
monitoring/: __init__.py
rag/: chunker.py  embedder.py  retriever.py  vector_store.py
rules/: hs_codes.json  regulations.json
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_compliance.py  test_evaluator.py  test_graph.py  test_hs_classifier.py  test_rules_data.py  test_utils.py
ui/: app.py  demo.py
utils/: langsmith.py  llm_factory.py  logger.py
