[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afrigate"
version = "0.1.0"
description = "AI-powered African trade compliance engine"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.5.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "rag", "ui", "utils", "monitoring"]
